# IdaSwitch

./: .editorconfig  .gitmodules  README.md
IdaSwitch/: CMakeLists.txt
IdaSwitch/Source/: AddressingConstants.h  BasicTypes.h  BlzCompression.cpp  BlzCompression.h  CMakeLists.txt  ConfigureDatabase.cpp  ConfigureDatabase.h  Elf.h  IdaSwitch.h  LoadImplementations.h  LoadKip.cpp  LoadNro.cpp  LoadNso.cpp  LoaderMain.cpp  Module.h  SegmentConstants.h  StringizeHelpers.h  SymbolRecovery.cpp  SymbolRecovery.h
IdaSwitch/Submodules/: CMakeLists.txt
